[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/shop_item.gd" type="Script" id=1]
[ext_resource path="res://sprites/no_skill.png" type="Texture" id=2]
[ext_resource path="res://sprites/rank.png" type="Texture" id=3]
[ext_resource path="res://sprites/coin.png" type="Texture" id=4]

[node name="Shop item" type="Panel"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 160.0
margin/bottom = 220.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 15, 15 )
transform/scale = Vector2( 0.340285, 0.340285 )
texture = ExtResource( 2 )

[node name="item_title" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 28.0
margin/top = 4.0
margin/right = 149.0
margin/bottom = 18.0
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Shield"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="item_type" type="Label" parent="."]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 44.0
margin/top = 18.0
margin/right = 200.0
margin/bottom = 32.0
custom_colors/font_color = Color( 0, 0.773438, 0.628418, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Active ability"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="item_status" type="Label" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 36.0
margin/right = 220.0
margin/bottom = 125.0
custom_colors/font_color = Color( 1, 0.632813, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Current status: \nNo shield"
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="item_next" type="Label" parent="."]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 3.0
margin/top = 101.0
margin/right = 220.0
margin/bottom = 205.0
custom_colors/font_color = Color( 1, 0.632813, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Next upgrade:\n1 rotating bullet every 15 seconds"
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="upgrade_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = 196.0
margin/right = 67.0
margin/bottom = 216.0
custom_colors/font_color = Color( 1, 0.631373, 0, 1 )
custom_colors/font_color_hover = Color( 0.576471, 0.0117647, 0.0117647, 1 )
custom_colors/font_color_pressed = Color( 0.578125, 0.0135498, 0.0135498, 1 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Upgrade"
flat = false

[node name="Prices" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Rank_points" type="Control" parent="Prices"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 15.0
margin/right = 40.0
margin/bottom = 55.0

[node name="rank_points" type="Label" parent="Prices/Rank_points"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 159.0
margin/right = 133.0
margin/bottom = 173.0
custom_colors/font_color = Color( 1, 0.09375, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="rank_sprite" type="Sprite" parent="Prices/Rank_points"]

transform/pos = Vector2( 147.086, 166.656 )
transform/scale = Vector2( 0.0370836, 0.0370836 )
texture = ExtResource( 3 )

[node name="Coins" type="Control" parent="Prices"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 40.0
margin/bottom = 56.0

[node name="price" type="Label" parent="Prices/Coins"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 183.0
margin/right = 133.0
margin/bottom = 197.0
custom_colors/font_color = Color( 1, 0.632813, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "50"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="coin" type="Sprite" parent="Prices/Coins"]

transform/pos = Vector2( 146.964, 189.34 )
transform/scale = Vector2( 0.155388, 0.155388 )
texture = ExtResource( 4 )


